<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="viewModel" type="com.example.contacts.presentation.onecontact.OneContactViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.onecontact.OneContactActivity">

        <androidx.appcompat.widget.Toolbar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:theme="?attr/actionBarTheme"
                android:minHeight="?attr/actionBarSize"
                android:id="@+id/one_contact_toolbar" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>
        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/one_contact_toolbar"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:cardCornerRadius="70dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/second_name_edit_view">
            <ImageView
                    android:layout_width="99dp"
                    android:layout_height="102dp"
                    android:id="@+id/image_view"
                    app:srcCompat="@drawable/blank_img"
            />
        </androidx.cardview.widget.CardView>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/guideline"
                app:layout_constraintGuide_percent="0.44"
        />
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/guideline2"
                app:layout_constraintGuide_percent="0.33"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/phone_edit_text" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline" android:hint="@string/hint_phone"/>
        <EditText
                android:text="@={viewModel.firstName}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/first_name_edit_text" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/hint_first_name" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/one_contact_toolbar"/>
        <EditText
                android:text="@={viewModel.secondName}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/second_name_edit_view" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/first_name_edit_text" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/phone_edit_text" android:hint="@string/hint_second_name"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/phone_edit_text" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/bottom_part" android:layout_marginTop="16dp">
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp" android:id="@+id/view2" android:background="@color/colorTextDark"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/ringtone_select">

                <TextView
                        android:text="@={viewModel.ringtone}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/ringtone_text_view"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="16dp" android:layout_marginStart="16dp"
                        android:textSize="18sp" android:textColor="@color/colorTextDark"/>
                <TextView
                        android:text="@string/ringtone_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView2" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/ringtone_text_view"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/ic_chevron_right_black_24dp"
                        android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp" android:id="@+id/view" android:background="@color/colorPrimaryDark"
                    android:layout_marginStart="16dp"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/note_select">

                <TextView
                        android:text="@={viewModel.note}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:id="@+id/note_text_view" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp" android:textSize="18sp"
                        android:textColor="@color/colorTextDark"/>
                <TextView
                        android:text="@string/note_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView4"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/note_text_view" android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp" android:id="@+id/view4" android:background="@color/colorTextDark"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>